<resources>
    <string name="app_name">Normal Player</string>
    <string name="previous">Previous</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="next">Next</string>
    <string name="notification_channel_name" translatable="false">Normal Player Channel</string>
    <string name="home">Home</string>
    <string name="music">Music</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="folders">Folders</string>
    <string name="favorite">Favorite</string>
    <string name="error_no_metadata">Unable to retrieve metadata.</string>
    <string name="browse_genres">Genres</string>
    <string name="browse_genre_subtitle">Songs by genre</string>
    <string name="browse_musics_by_genre_subtitle" translatable="false">%1$s songs</string>
    <string name="browse_musics_by_album_subtitle" translatable="false">%1$s songs</string>
    <string name="browse_musics_by_artist_subtitle" translatable="false">%1$s songs</string>
    <string name="playback_service">Playback Service</string>
    <string name="error_loading_media">Error loading media</string>
    <string name="notification_channel_description">Channel description</string>
    <string name="search">Search</string>
    <string name="duration_unknown" translatable="false">--:--</string>
    <string name="duration_format" translatable="false">%d:%02d</string>
    <string name="song_format" translatable="false">%s • %s</string>
    <string name="now_playing">NOW PLAYING</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="edit_tags">Edit tags</string>
    <string name="share">Share</string>
    <string name="goto_artist">Go to artist</string>
    <string name="goto_album">Go to album</string>
    <string name="vk_music">VK music</string>
    <string name="time_placeholder" translatable="false">0:00</string>
    <string name="genres">Genres</string>
    <string name="settings">Settings</string>
    <string name="vkontakte">Vkontakte</string>
    <string name="sort">Sort</string>
    <string name="rock">Rock</string>
    <string name="pop">Pop</string>
    <string name="rap"><![CDATA[Rap & Hip-Hop]]></string>
    <string name="easy">Easy Listening</string>
    <string name="house"><![CDATA[House & Dance]]></string>
    <string name="instrumental">Instrumental</string>
    <string name="metal">Metal</string>
    <string name="alternative">Alternative</string>
    <string name="dubstep">Dubstep</string>
    <string name="juzz_blues"><![CDATA[Juzz & Blues]]></string>
    <string name="drum_bass"><![CDATA[Drum & Bass]]></string>
    <string name="trance">Trance</string>
    <string name="chanson">Chanson</string>
    <string name="ethnic">Ethnic</string>
    <string name="acoustic_vocal"><![CDATA[Acoustic & Vocal]]></string>
    <string name="reggae">Reggae</string>
    <string name="classical">Classical</string>
    <string name="indie_pop">Indie Pop</string>
    <string name="speech">Speech</string>
    <string name="electro_pop_disco"><![CDATA[Electropop & Disco]]></string>
    <string name="other">Other</string>
    <string name="phone">Phone</string>
    <string name="sort_title_asc">Title A-Z</string>
    <string name="sort_title_desc">Title Z-A</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>