<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/goto_album"
        android:icon="@drawable/ic_album_24"
        android:title="@string/goto_album" />

    <item
        android:id="@+id/goto_artist"
        android:icon="@drawable/ic_artist_24"
        android:title="@string/goto_artist" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share_24"
        android:title="@string/share" />

    <item
        android:id="@+id/edit_tags"
        android:icon="@drawable/ic_edit_24"
        android:title="@string/edit_tags"/>

    <item
        android:id="@+id/details"
        android:icon="@drawable/ic_info_24"
        android:title="@string/details" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_24"
        android:title="@string/delete"/>

</menu>