<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_music"
        android:icon="@drawable/ic_music_note_24"
        android:title="@string/music" />

    <item
        android:id="@+id/nav_albums"
        android:icon="@drawable/ic_album_24"
        android:title="@string/albums" />

    <item
        android:id="@+id/nav_artists"
        android:icon="@drawable/ic_artist_24"
        android:title="@string/artists" />

    <item
        android:id="@+id/nav_music1"
        android:icon="@drawable/ic_music_note_24"
        android:title="@string/music" />

    <item
        android:id="@+id/nav_albums1"
        android:icon="@drawable/ic_album_24"
        android:title="@string/albums" />

    <item
        android:id="@+id/nav_artists1"
        android:icon="@drawable/ic_artist_24"
        android:title="@string/artists" />

</menu>